Fix for bug 297561: onmouseover , javascript alert shows twice r+sr=roc